Package: startup
================

Version: 0.3.0-9000 [2016-12-09]
o New conditional <key>=<value> specification: Directory and file
  names containing a package=<name> specification will only be
  processed if and only if package <name> is installed and can be
  loaded.
o Errors occuring while sourcing an Rprofile file now also
  contain information about in file the error occurred.
  Lines with invalid syntax in Renviron files are ignored with
  a message outputted saying so.  Due to limitations in how
  base::readRenviron() works, it is not possible to detect these
  errors nor capture the outputted message.
  

Version: 0.3.0 [2016-11-21]
o No updates.  First submission to CRAN.


Version: 0.2.0 [2016-11-20]
o Add arguments sibling = FALSE to startup().  If sibling = TRUE,
  the corresponding startup file needs to exist in the same
  location as the directory in order for the directory to be
  processed.


Version: 0.1.0 [2016-11-15]
o Package created. Adopted from a specialized .Rprofile script.